payment-service: update application.properties: add kafka config properties

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -30,3 +30,9 @@ eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 # gRPC config
 # --------------------
 grpc.server.port=50090
+# --------------------
+# Kafka config
+# --------------------
+spring.kafka.producer.bootstrap-servers=kafka-broker-01:19092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
