--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -15,21 +15,21 @@ spring:
       repositories:
         enabled: true
   r2dbc:
-    url: r2dbc:mysql://mysql-server:3306/bk_travel_account
-    username: root
-    password: root
+    url: r2dbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:bk_travel_account}
+    username: ${DB_USER:root}
+    password: ${DB_PASSWORD:root}
   liquibase:
-    url: jdbc:mysql://mysql-server:3306/bk_travel_account
-    user: root
-    password: root
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:bk_travel_account}
+    user: ${DB_USER:root}
+    password: ${DB_PASSWORD:root}
     change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: account-service
+    # hostname: account-service
     appname: account-service
   client:
     service-url:
-      defaultZone: http://discovery-server:8761/eureka
+      defaultZone: http://${SERVICE_REGISTRY_HOST:localhost}:${SERVICE_REGISTRY_PORT:8761}/eureka
 mysql-server:
   hostname: mysql-server
   user: root
