--- a/marking-service/src/main/resources/application.yml
+++ b/marking-service/src/main/resources/application.yml
@@ -4,21 +4,21 @@ spring:
   application:
     name: marking-service
   liquibase:
-    url: jdbc:mysql://mysql-server:3306/bk_travel_marking
-    user: root
-    password: root
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_marking
+    user: ${DB_USER:root}
+    password: ${DB_PASSWORD:root}
     change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: marking-service
+    # hostname: marking-service
     appname: marking-service
   client:
     service-url:
-      defaultZone: http://discovery-server:8761/eureka
+      defaultZone: http://${SERVICE_REGISTRY_HOST:localhost}:${SERVICE_REGISTRY_PORT:8761}/eureka
 bk-travel:
   database:
     config:
       server:
-        url: r2dbc:mysql://mysql-server:3306/bk_travel_marking
-        username: root
-        password: root
+        url: r2dbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_marking
+        username: ${DB_USER:root}
+        password: ${DB_PASSWORD:root}
