--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -5,27 +5,27 @@ spring:
     name: notification-service
   liquibase:
     enabled: false
-    url: jdbc:mysql://mysql-server:3306/bk_travel_notification
-    user: root
-    password: root
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_notification
+    user: ${DB_USER:root}
+    password: ${DB_PASSWORD:root}
     change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: notification-service
+    # hostname: notification-service
     appname: notification-service
   client:
     service-url:
-      defaultZone: http://discovery-server:8761/eureka
+      defaultZone: http://${SERVICE_REGISTRY_HOST:localhost}:${SERVICE_REGISTRY_PORT:8761}/eureka
 bk-travel:
   database:
     config:
       server:
-        url: r2dbc:mysql://mysql-server:3306/bk_travel_notification
-        username: root
-        password: root
+        url: r2dbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_notification
+        username: ${DB_USER:root}
+        password: ${DB_PASSWORD:root}
 kafka:
-  bootstrap-servers:
-    url: http://kafka-broker-01:19092
+  bootstrap-servers: ${KAFKA_BROKER_HOST:localhost}:${KAFKA_BROKER_PORT:9092}
   consumer:
     auto-offset-reset: latest
-    group-id: bk-travel-group
+    group-id: notification-service-group
+    client-id: notification-service-consumer
