--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=payment-service
 # --------------------
 # Mysql connection config
 # --------------------
-spring.datasource.url=jdbc:mysql://mysql-server:3306/bk_travel_payment
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_payment
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.format_sql=true
 # --------------------
@@ -16,16 +16,16 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 # --------------------
 # Liquibase migration config
 # --------------------
-spring.liquibase.url=jdbc:mysql://mysql-server:3306/bk_travel_payment
-spring.liquibase.user=root
-spring.liquibase.password=root
+spring.liquibase.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_payment
+spring.liquibase.user=${DB_USER:root}
+spring.liquibase.password=${DB_PASSWORD:root}
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 # --------------------
 # Eureka client config
 # --------------------
-eureka.instance.hostname=payment-service
+#eureka.instance.hostname=payment-service
 eureka.instance.appname=payment-service
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
+eureka.client.service-url.defaultZone=http://${SERVICE_REGISTRY_HOST:localhost}:${SERVICE_REGISTRY_PORT:8761}/eureka
 # --------------------
 # gRPC config
 # --------------------
@@ -33,6 +33,6 @@ grpc.server.port=50090
 # --------------------
 # Kafka config
 # --------------------
-spring.kafka.producer.bootstrap-servers=kafka-broker-01:19092
+spring.kafka.producer.bootstrap-servers=${KAFKA_BROKER_HOST:localhost}:${KAFKA_BROKER_PORT:9092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
