--- a/staff-service/src/main/resources/application.yml
+++ b/staff-service/src/main/resources/application.yml
@@ -4,25 +4,25 @@ spring:
   application:
     name: staff-service
   liquibase:
-    url: jdbc:mysql://mysql-server:3306/bk_travel_staff
-    user: root
-    password: root
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_staff
+    user: ${DB_USER:root}
+    password: ${DB_PASSWORD:root}
     change-log: classpath:/db/changelog/changelog-master.xml
 eureka:
   instance:
     appname: staff-service
-    hostname: staff-service
+    # hostname: staff-service
   client:
     enabled: true
     service-url:
-      defaultZone: http://discovery-server:8761/eureka
+      defaultZone: http://${SERVICE_REGISTRY_HOST:localhost}:${SERVICE_REGISTRY_PORT:8761}/eureka
 bk-travel:
   database:
     config:
       server:
-        url: r2dbc:mysql://mysql-server:3306/bk_travel_staff
-        username: root
-        password: root
+        url: r2dbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_staff
+        username: ${DB_USER:root}
+        password: ${DB_PASSWORD:root}
 grpc:
   server:
     port: 50085
