--- a/tourist-attraction-service/src/main/resources/application.properties
+++ b/tourist-attraction-service/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=tourist-attraction-service
 # ------------------
 # Database config
 # ------------------
-spring.datasource.url=jdbc:mysql://mysql-server:3306/bk_travel_tourist_attraction
-spring.datasource.name=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.format_sql=true
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_tourist_attraction
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:root}
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.format_sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # --------------------
@@ -18,13 +18,13 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 # ------------------
 # Liquibase migration config
 # ------------------
-spring.liquibase.url=jdbc:mysql://mysql-server:3306/bk_travel_tourist_attraction
-spring.liquibase.user=root
-spring.liquibase.password=root
+spring.liquibase.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/bk_travel_tourist_attraction
+spring.liquibase.user=${DB_USER:root}
+spring.liquibase.password=${DB_PASSWORD:root}
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 # ------------------
 # Eureka discovery client config
 # ------------------
-eureka.instance.hostname=tourist-attraction-service
+# eureka.instance.hostname=tourist-attraction-service
 eureka.instance.appname=tourist-attraction-service
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
+eureka.client.service-url.defaultZone=http://${SERVICE_REGISTRY_HOST:localhost}:${SERVICE_REGISTRY_PORT:8761}/eureka
