--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,20 +1,15 @@
-# Filename: Dockerfile
-FROM openjdk:17-alpine
-# Install maven
-# RUN apk --no-cache add maven
-# Set working directory
+# Stage 1: building
+FROM maven:3.6.3-openjdk-17 AS building
 WORKDIR /app
-COPY .mvn .mvn/
-COPY mvnw pom.xml ./
-# Install dependencies
-# RUN mvn dependency:copy-dependencies
-RUN chmod +x mvnw
-RUN ./mvnw dependency:go-offline
-COPY . .
-# RUN cp /usr/share/zoneinfo/Asia/Ho_Chi_Minh /etc/localtime && \
-#     echo "Asia/Ho_Chi_Minh" > /etc/timezone
+COPY pom.xml .
+RUN mvn dependency:go-offline
+COPY src ./src
+RUN mvn clean package -DskipTests
+# Stage 2: running
+FROM openjdk:17-alpine AS running
+WORKDIR /app
+COPY --from=building /app/target/*.jar app.jar
 ENV TZ=Asia/Ho_Chi_Minh
-# VOLUME [ "type=bind,src=./,target=/app" ]
 EXPOSE 8080
-ENTRYPOINT [ "./mvnw", "spring-boot:run" ]
+ENTRYPOINT [ "java", "-jar", "app.jar" ]
 LABEL auth="Aresky"
